syntax = "proto3";

package email.v1;
option go_package = "github.com/hgyowan/go-email-grpc/gen/email/v1";

import "google/protobuf/descriptor.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/api/httpbody.proto";
import "email/model/v1/model.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "CFM API Swagger"
    version: "1.0"
    contact: {
      name: "gRPC-Gateway project"
      url: "https://github.com/hgyowan/church-financial-grpc-gateway"
    }
  }
  host: "cfm-api-dev.holyflows.com"
  schemes: HTTPS
  schemes: HTTP
  responses: {
    key: "success"
    value: {
      description: "Success Response"
      schema: {
        json_schema: {example: "{\"code\": 1, \"data\": \"200 에 해당하는 응답\"}"}
      }
    }
  }
  security_definitions: {
    security: {
      key: "X-User-Token"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "x-user-token"
      }
    }
  }
  security: {
    security_requirement: {
      key: "X-User-Token";
    };
  };
};

service EmailService {
  rpc SendTemplateEmail(SendTemplateEmailRequest) returns (SendTemplateEmailResponse) {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "템플릿 이메일 발송"
      description: "템플릿 이메일 발송"
      responses: {
        key: "400"
        value: {
          description: "(40001)wrong variable type"
          schema: {
            json_schema: {example: "{\"code\": \"에러코드\", \"data\": null}"}
          }
        }
      }
      responses: {
        key: "500"
        value: {
          description: "(10001)fila to create data"
          schema: {
            json_schema: {example: "{\"code\": \"에러코드\", \"data\": null}"}
          }
        }
      }
    };
  }
}

message SendTemplateEmailRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      description: "템플릿 이메일 발송 요청"
      required: ["list"]
    }
  };

  repeated model.v1.Recipient list = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "수신 정보 목록"}];
}
message SendTemplateEmailResponse {}